# expo-gemini-live

./: .env.example  .gitignore  README.md  pipecat-ai-client-js-1.4.1.tgz  pipecat-ai-react-native-daily-transport-1.4.0.tgz
.github/: copilot-instructions.md
docs/: architecture.md  video-integration-plan.md
mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/api/: rtvi.ts
mobile/src/components/: AudioMeter.tsx  StatusBadge.tsx  TranscriptList.tsx
mobile/src/config/: env.ts
mobile/src/hooks/: useDevicePermissions.ts
mobile/src/providers/: VoiceSessionProvider.tsx
mobile/src/screens/: PreJoinScreen.tsx  SessionScreen.tsx
mobile/src/state/: voiceStore.ts
mobile/src/theme/: colors.ts
mobile/src/types/: rtvi.ts
mobile/src/utils/: fetchPolyfill.ts
scripts/: verify-video.sh
server/: pyproject.toml
server/app/: config.py  main.py  models.py
server/app/api/: deps.py  routes.py
server/app/services/: bot.py  daily.py  sessions.py
server/pipecat_gemini_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: test_api.py  test_bot.py
tmp/pipecat-transport/package/lib/commonjs/: index.js  index.js.map  transport.js  transport.js.map
tmp/pipecat-transport/package/lib/commonjs/view/: VoiceClientVideoView.js  VoiceClientVideoView.js.map
tmp/pipecat-transport/package/lib/module/: index.js  index.js.map  transport.js  transport.js.map
tmp/pipecat-transport/package/lib/module/view/: VoiceClientVideoView.js  VoiceClientVideoView.js.map
(+10 files in other folders)
